--- a/Docker/RUN/dockerfile
+++ b/Docker/RUN/dockerfile
@@ -2,5 +2,5 @@ FROM almalinux
 RUN yum install nginx -y
 USER nginx
 RUN touch /tmp/hello.txt
-RUN cat /usr/share/nginx/html/
+RUN cd /usr/share/nginx/html/
 RUN echo "Hello world" >  HI.html
